[package]
name = "ingles"
version = "0.1.1"
authors = ["lim <liam@liamiam.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1" # used for matching syntax
log = "0.4.11" # used for logging
simple_logger = "1.6.0" # ^
rand = "0.7.3" # used for label generation in ReadFromMemoryRange
